[package]
name = "shuttle-app"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-axum = "0.52.0"
shuttle-runtime = "0.52.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
sha2 = "0.10"
regex = "1.10"

[[bin]]
name = "shuttle-app"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
